Bug 413910 - Added points to an association do not display them by default
Summary: Added points to an association do not display them by default
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.29.2 (KDE Applications 19.08.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-07 10:56 UTC by Ralf Habacker
Modified: 2019-11-07 10:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.80 (KDE Applications 19.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-11-07 10:56:08 UTC
SUMMARY


STEPS TO REPRODUCE
1. start umbrello
2. add two classes
3. add an association
4. add a point to the association
5. move one class to see that the association has three points

OBSERVED RESULT
The added point is not displayed

EXPECTED RESULT
The added point should be displayed

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE_Leap 15.1
KDE Frameworks Version: 5.55
Qt Version: 5.9.7

ADDITIONAL INFORMATION
After adding points, the line layout must be changed from 'direct' to 'polyline'.
Comment 1 Ralf Habacker 2019-11-07 10:59:07 UTC
Git commit 3a6e6d0e709fd441b38a064e67115e1742efa80c by Ralf Habacker.
Committed on 07/11/2019 at 10:58.
Pushed by habacker into branch 'master'.

Fix 'Added points to an association do not display them by default'
FIXED-IN:2.29.80 (KDE Applications 19.11.80)

M  +7    -0    umbrello/umlwidgets/associationwidget.cpp

https://commits.kde.org/umbrello/3a6e6d0e709fd441b38a064e67115e1742efa80c