Fix 'Added points to an association do not display them by default'

BUG:413910
FIXED-IN:2.29.80 (KDE Applications 19.11.80)